# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-gax"
version     = "0.22.0"
description = "Google Cloud Client Libraries for Rust"
# Inherit other attributes from the workspace.
authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# We want to generate documentation for streaming APIs, gated by this feature.
# We do not want to generate documentation for `unstable-sdk-client`, which
# gates internal tpes.
features = ["unstable-stream"]

[dependencies]
base64      = "0.22"
bytes       = "1"
futures     = { version = "0.3" }
http        = "1"
pin-project = { version = "1" }
rand        = "0.9"
serde       = "1"
serde_json  = "1"
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
# Local crates
rpc.workspace = true
wkt.workspace = true

[dev-dependencies]
# This is a workaround to integration test features of this crate. Open issue
# https://github.com/rust-lang/cargo/issues/2911.
gax                 = { path = ".", package = "google-cloud-gax", features = ["unstable-sdk-client"] }
anyhow.workspace    = true
mockall             = "0.13"
serde.workspace     = true
serial_test         = "3"
test-case.workspace = true
tokio               = { version = "1", features = ["test-util"] }
tokio-test          = "0.4"

[features]
unstable-sdk-client = []
unstable-stream     = []
# DO NOT USE: this allows us to detect semver changes in types used in the
# implementation of client libraries. None of the types or functions gated
# by this feature are intended for general use. We do not plan to document these
# features and offer no guarantees on their stability.
_internal-semver = []
