# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "google-cloud-gax"
# ATTENTION: if you change the major version, remember to change the major
#     version of all downstream dependencies. For details see:
#         https://github.com/googleapis/google-cloud-rust/issues/3237
#         https://github.com/googleapis/google-cloud-rust/issues/3265
version     = "0.25.0"
description = "Google Cloud Client Libraries for Rust"
# Inherit other attributes from the workspace.
authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# We want to generate documentation for streaming APIs, gated by this feature.
features = ["unstable-stream"]

[dependencies]
base64.workspace      = true
bytes.workspace       = true
futures.workspace     = true
http.workspace        = true
pin-project.workspace = true
rand                  = { workspace = true, features = ["thread_rng"] }
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
tokio                 = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
# Local crates
rpc.workspace = true
wkt.workspace = true

[dev-dependencies]
anyhow.workspace      = true
mockall.workspace     = true
serde.workspace       = true
serial_test.workspace = true
test-case.workspace   = true
tokio                 = { workspace = true, features = ["test-util"] }
tokio-test.workspace  = true

[features]
# Enable functionality that depends on the [futures::stream::Stream] trait. This
# functionality may change as the trait is stabilized.
#
# [futures::stream::Stream]: https://docs.rs/futures/latest/futures/stream/trait.Stream.html
unstable-stream = []
# DO NOT USE: this allows us to detect semver changes in types used in the
# implementation of client libraries. None of the types or functions gated
# by this feature are intended for general use. We do not plan to document these
# features and offer no guarantees on their stability.
_internal-semver = []
