# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-http-client"
version     = "0.1.0"
description = "Google Cloud Client Libraries for Rust - Common HTTP Client"
# Inherit other attributes from the workspace.
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
keywords.workspace   = true
categories.workspace = true

[dependencies]
reqwest    = "0.12"
serde      = "1"
serde_json = "1"
thiserror  = "2"
tokio      = { version = "1", features = ["macros", "rt-multi-thread"] }
# Local crates
auth = { version = "0.18.0", path = "../auth", package = "google-cloud-auth" }
gax  = { version = "0.21", path = "../gax", package = "google-cloud-gax", features = ["unstable-sdk-client"] }
rpc  = { version = "0.2", path = "../generated/rpc/types", package = "google-cloud-rpc" }

[dev-dependencies]
axum        = "0.8"
bytes       = "1"
http        = "1"
mockall     = "0.13"
serde_with  = "3"
serial_test = "3"
tokio       = { version = "1", features = ["test-util"] }
# Local crates
echo-server = { path = "echo-server" }
wkt  = { version = "0.2", path = "../wkt", package = "google-cloud-wkt" }
