# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
description       = "Integration tests for google-cloud-rust."
edition.workspace = true
name              = "integration-tests"
publish           = false
version           = "0.0.0"

[features]
log-integration-tests = ["dep:tracing-subscriber"]
run-integration-tests = []

[dependencies]
bytes                 = "1"
crc32c                = "0.6"
futures               = "0.3"
auth.workspace        = true
gax                   = { workspace = true, features = ["unstable-stream"] }
iam_v1.workspace      = true
longrunning.workspace = true
rand                  = "0.9"
serde_json            = "1"
tokio                 = { version = "1", features = ["full", "macros"] }
tracing               = "0.1"
tracing-subscriber    = { version = "0.3", optional = true }
wkt.workspace         = true

[dependencies.aiplatform]
package          = "google-cloud-aiplatform-v1"
path             = "../../src/generated/cloud/aiplatform/v1"
default-features = false
features         = ["endpoint-service", "job-service", "prediction-service"]

[dependencies.bigquery]
package = "google-cloud-bigquery-v2"
path    = "../../src/generated/cloud/bigquery/v2"

[dependencies.firestore]
package = "google-cloud-firestore"
path    = "../../src/firestore"

[dependencies.storage]
package = "google-cloud-storage-control"
path    = "../../src/storage-control"

[dependencies.sm]
package = "google-cloud-secretmanager-v1"
path    = "../../src/generated/cloud/secretmanager/v1"

[dependencies.smo]
package = "secretmanager-openapi-v1"
path    = "../../src/generated/openapi-validation"

[dependencies.ta]
package = "google-cloud-telcoautomation-v1"
path    = "../../src/generated/cloud/telcoautomation/v1"

[dependencies.wf]
package = "google-cloud-workflows-v1"
path    = "../../src/generated/cloud/workflows/v1"

[dependencies.wfe]
package = "google-cloud-workflows-executions-v1"
path    = "../../src/generated/cloud/workflows/executions/v1"

[dev-dependencies]
anyhow.workspace    = true
axum.workspace      = true
mockall             = "0.13"
reqwest.workspace   = true
serde               = { version = "1", features = ["serde_derive"] }
serde_with          = { version = "3", features = ["base64"] }
test-case.workspace = true
tokio               = { version = "1", features = ["full", "macros"] }
