# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
description       = "Integration tests for google-cloud-rust."
edition.workspace = true
name              = "integration-tests"
publish           = false
version           = "0.0.0"

[features]
log-integration-tests = []
# These are normally disabled because they run against production.
run-integration-tests = []
# These are normally disabled because they require installing the golang
# toolchain.
run-showcase-tests = []

[dependencies]
anyhow.workspace                  = true
bytes.workspace                   = true
crc32c.workspace                  = true
flate2                            = { workspace = true, features = ["zlib-rs"] }
futures.workspace                 = true
auth.workspace                    = true
gax                               = { workspace = true, features = ["unstable-stream"] }
gaxi                              = { workspace = true, features = ["_internal-http-client"] }
google-cloud-test-utils.workspace = true
http.workspace                    = true
iam_v1.workspace                  = true
longrunning.workspace             = true
lro.workspace                     = true
opentelemetry.workspace           = true
opentelemetry_sdk.workspace       = true
opentelemetry-otlp.workspace      = true
opentelemetry-proto.workspace     = true
rand                              = { workspace = true, features = ["thread_rng"] }
serde_json.workspace              = true
tokio                             = { workspace = true, features = ["process", "test-util"] }
tokio-stream                      = { workspace = true, features = ["net"] }
tonic                             = { workspace = true, features = ["codegen", "router", "server", "transport"] }
tracing.workspace                 = true
tracing-opentelemetry.workspace   = true
tracing-subscriber                = { workspace = true, features = ["env-filter", "fmt", "std"] }
uuid                              = { workspace = true, features = ["std", "v4"] }
wkt.workspace                     = true
# Formatting trick: this comment preserves formatting in the preceding block.
google-cloud-compute-v1 = { workspace = true, features = [
  "images",
  "instances",
  "machine-types",
  "region-instances",
  "zone-operations",
  "zones",
] }

[dependencies.aiplatform]
package          = "google-cloud-aiplatform-v1"
path             = "../../src/generated/cloud/aiplatform/v1"
default-features = false
features         = ["model-service", "prediction-service"]

[dependencies.bigquery]
package = "google-cloud-bigquery-v2"
path    = "../../src/generated/cloud/bigquery/v2"

[dependencies.firestore]
package = "google-cloud-firestore"
path    = "../../src/firestore"

[dependencies.pubsub]
package = "google-cloud-pubsub"
path    = "../../src/pubsub"

[dependencies.pubsub-samples]
path = "../../src/pubsub/examples"

[dependencies.showcase]
package = "google-cloud-showcase-v1beta1"
path    = "../../src/generated/showcase"

[dependencies.sm]
package = "google-cloud-secretmanager-v1"
path    = "../../src/generated/cloud/secretmanager/v1"

[dependencies.smo]
package = "secretmanager-openapi-v1"
path    = "../../src/generated/openapi-validation"

[dependencies.sql]
package = "google-cloud-sql-v1"
path    = "../../src/generated/cloud/sql/v1"

[dependencies.storage]
package  = "google-cloud-storage"
path     = "../../src/storage"
features = ["unstable-stream"]

[dependencies.storage-samples]
path = "../../src/storage/examples"

[dependencies.ta]
package = "google-cloud-telcoautomation-v1"
path    = "../../src/generated/cloud/telcoautomation/v1"

[dependencies.wf]
package = "google-cloud-workflows-v1"
path    = "../../src/generated/cloud/workflows/v1"

[dependencies.wfe]
package = "google-cloud-workflows-executions-v1"
path    = "../../src/generated/cloud/workflows/executions/v1"

[dev-dependencies]
anyhow.workspace            = true
httptest.workspace          = true
mockall.workspace           = true
opentelemetry_sdk           = { workspace = true, features = ["testing"] }
reqwest.workspace           = true
serde.workspace             = true
serde_with.workspace        = true
static_assertions.workspace = true
test-case.workspace         = true
tokio.workspace             = true
tonic                       = { workspace = true, features = ["server", "transport"] }
tower                       = { version = "0.4", features = ["util"] }

[lints]
workspace = true
