# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
description = "Google Cloud Client Libraries for Rust - LRO Helpers"
name        = "google-cloud-lro"
version     = "0.1.1"
# Inherit other attributes from the workspace.
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

[package.metadata.docs.rs]
features = ["unstable-stream"]

[dependencies]
futures     = { version = "0.3", optional = true }
pin-project = { version = "1", optional = true }
serde       = "1"
tokio       = { version = "1", features = ["time"] }
# Local crates
gax         = { version = "0.21", path = "../gax", package = "google-cloud-gax" }
longrunning = { version = "0.22", path = "../generated/longrunning", package = "google-cloud-longrunning" }
rpc         = { version = "0.2", path = "../generated/rpc/types", package = "google-cloud-rpc" }
wkt         = { version = "0.2", path = "../wkt", package = "google-cloud-wkt" }

[features]
unstable-stream = ["dep:futures", "dep:pin-project"]

[dev-dependencies]
axum       = "0.8"
reqwest    = "0.12"
serde_json = "1"
tokio      = { version = "1", features = ["test-util"] }
# Local dependencies
auth    = { path = "../auth", package = "google-cloud-auth" }
gclient = { path = "../http-client", package = "google-cloud-http-client" }
lro     = { path = ".", package = "google-cloud-lro", features = ["unstable-stream"] }
