# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
description = "Google Cloud Client Libraries for Rust - LRO Helpers"
name        = "google-cloud-lro"
# ATTENTION: if you change the major version, remember to change the major
#     version of all downstream dependencies. For details see:
#         https://github.com/googleapis/google-cloud-rust/issues/3237
#         https://github.com/googleapis/google-cloud-rust/issues/3265
version = "1.2.0"
# Inherit other attributes from the workspace.
authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# Enable functionality that depends on the [futures::stream::Stream] trait. This
# functionality may change as the trait is stabilized.
#
# [futures::stream::Stream]: https://docs.rs/futures/latest/futures/stream/trait.Stream.html
features = ["unstable-stream"]

[dependencies]
futures         = { workspace = true, optional = true }
pin-project     = { workspace = true, optional = true }
serde.workspace = true
tokio           = { workspace = true, features = ["time"] }
# Local crates
gax.workspace         = true
longrunning.workspace = true
rpc.workspace         = true
wkt.workspace         = true

[features]
unstable-stream = ["dep:futures", "dep:pin-project"]
# DO NOT USE: this allows us to detect semver changes in types used in the
# implementation of client libraries. None of the types or functions gated
# by this feature are intended for general use. We do not plan to document these
# features and offer no guarantees on their stability.
_internal-semver = []

[dev-dependencies]
anyhow.workspace     = true
httptest.workspace   = true
reqwest.workspace    = true
serde_json.workspace = true
tokio                = { workspace = true, features = ["test-util"] }
tokio-test.workspace = true
# Local dependencies
auth.workspace = true
# reqwest panics if (1) configured to support TLS and (2) no default crypto
# provider is configured via features or installed at runtime. Even if reqwest
# is being used without TLS. Enabling the default provider in tests to
# workaround this issue.
gaxi = { workspace = true, features = ["_default-rustls-provider"] }
lro  = { path = ".", package = "google-cloud-lro", features = ["unstable-stream"] }
