# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
description       = "Google Cloud client libraries for Rust: ProtoJSON conformance"
edition.workspace = true
name              = "protojson-conformance"
publish           = false
version           = "0.0.0"

[dependencies]
anyhow.workspace      = true
bytes.workspace       = true
crc32c.workspace      = true
futures.workspace     = true
prost.workspace       = true
prost-types.workspace = true
serde.workspace       = true
serde_json            = { workspace = true, features = ["float_roundtrip"] }
serde_with.workspace  = true
tokio.workspace       = true
# Local dependencies
wkt.workspace = true
gaxi          = { workspace = true, features = ["_internal-grpc-client"] }
