# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-pubsub"
version     = "0.32.2-preview"
description = "Google Cloud Client Libraries for Rust - Pub/Sub"
# Inherit other attributes from the workspace.
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true

[dependencies]
async-trait.workspace  = true
auth.workspace         = true
bytes.workspace        = true
futures.workspace      = true
gax.workspace          = true
gaxi                   = { workspace = true, features = ["_internal-common", "_internal-grpc-client", "_internal-http-client"] }
http.workspace         = true
iam_v1.workspace       = true
lazy_static.workspace  = true
prost.workspace        = true
prost-types.workspace  = true
reqwest.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
serde_with.workspace   = true
thiserror.workspace    = true
tonic.workspace        = true
tokio                  = { workspace = true, features = ["sync"] }
tokio-stream.workspace = true
tokio-util.workspace   = true
tracing.workspace      = true
uuid.workspace         = true
wkt.workspace          = true

[features]
default = ["default-rustls-provider"]
# Enabled by default. Use the default rustls crypto provider ([ring]) for TLS
# and authentication. Applications with specific requirements for cryptography
# (such as exclusively using the [aws-lc-rs], or [ring] crates) should disable
# this default and install the default crypto provider in `rustls` to fit their
# requirements.
default-rustls-provider = ["gaxi/_default-rustls-provider"]

[dev-dependencies]
anyhow.workspace     = true
mockall.workspace    = true
rand.workspace       = true
test-case.workspace  = true
tokio-test.workspace = true
tokio.workspace      = true
tonic.workspace      = true
pubsub-grpc-mock     = { path = "grpc-mock" }

[lints]
workspace = true
