# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-retry"
version     = "0.1.0"
description = "Google Cloud Client Libraries for Rust"
# Inherit other attributes from the workspace.
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

[dependencies]
base64      = "0.22"
bytes       = "1"
futures     = { version = "0.3", optional = true }
http        = "1"
pin-project = { version = "1", optional = true }
rand        = "0.9"
reqwest     = { version = "0.12", optional = true }
rpc         = { version = "0.1", path = "../generated/rpc/types", package = "google-cloud-rpc" }
serde       = "1"
serde_json  = "1"
serde_with  = { version = "3", default-features = false, features = ["base64", "macros"] }
thiserror   = "2"
tokio       = { version = "1", features = ["macros", "rt-multi-thread"] }
wkt         = { version = "0.1", path = "../wkt", package = "google-cloud-wkt" }

[dev-dependencies]
# This is a workaround to integration test features of this crate. Open issue
# https://github.com/rust-lang/cargo/issues/2911.
axum        = "0.8"
mockall     = "0.13"
serde       = { version = "1", features = ["serde_derive"] }
serial_test = "3"
tempfile    = "3"
test-case   = "3"
tokio       = { version = "1", features = ["test-util"] }

[build-dependencies]
built = "0.7"

[features]
unstable-sdk-client = ["dep:reqwest"]
unstable-stream     = ["dep:futures", "dep:pin-project"]
