# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-spanner"
publish     = false
version     = "0.0.0"
description = "Google Cloud Client Libraries for Rust - Spanner"
# Inherit other attributes from the workspace.
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
gaxi = { workspace = true, features = [
  "_internal-common",
  "_internal-grpc-client",
  "google_cloud_unstable_grpc_server_streaming",
] }
google-cloud-gax = { workspace = true }
google-cloud-rpc = { workspace = true }
http.workspace = true
lazy_static.workspace = true
mockall = "0.14.0"
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
static_assertions = "1.1.0"
tracing.workspace = true
wkt.workspace = true

[dev-dependencies]
anyhow.workspace = true
gaxi = { package = "google-cloud-gax-internal", workspace = true, features = [
  "google_cloud_unstable_grpc_server_streaming",
] }
google-cloud-auth.workspace = true
spanner-grpc-mock = { path = "grpc-mock" }
tokio.workspace = true
tokio-stream.workspace = true
