# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-spanner"
version     = "0.34.1-preview"
description = "Google Cloud Client Libraries for Rust - Spanner"
# Inherit other attributes from the workspace.
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true

[features]
default = ["default-rustls-provider"]
# Enabled by default. Use the default rustls crypto provider ([aws-lc-rs]) for
# TLS and authentication. Applications with specific requirements for
# cryptography (such as exclusively using the [ring] crate) should disable this
# default and call `rustls::CryptoProvider::install_default()`.
default-rustls-provider = ["gaxi/_default-rustls-provider"]
unstable-stream         = ["dep:futures"]

[dependencies]
async-trait.workspace                  = true
base64.workspace                       = true
bytes.workspace                        = true
futures                                = { workspace = true, optional = true }
gaxi                                   = { workspace = true, features = ["_internal-common", "_internal-grpc-client", "_internal-grpc-server-streaming"] }
google-cloud-auth                      = { workspace = true }
google-cloud-gax                       = { workspace = true }
google-cloud-spanner-admin-database-v1 = { workspace = true }
google-cloud-spanner-admin-instance-v1 = { workspace = true }
google-cloud-rpc                       = { workspace = true }
http.workspace                         = true
prost.workspace                        = true
prost-types.workspace                  = true
rand                                   = { workspace = true }
rust_decimal                           = { workspace = true }
serde.workspace                        = true
serde_json.workspace                   = true
serde_with.workspace                   = true
thiserror.workspace                    = true
time                                   = { workspace = true, features = ["formatting", "macros", "parsing"] }
tokio                                  = { workspace = true, features = ["time"] }
tracing.workspace                      = true
url.workspace                          = true
wkt                                    = { workspace = true, features = ["time"] }

[dev-dependencies]
anyhow.workspace                   = true
google-cloud-test-macros.workspace = true
mockall.workspace                  = true
spanner-grpc-mock                  = { path = "grpc-mock" }
static_assertions.workspace        = true
tokio                              = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
