# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-storage-control"
publish     = false
version     = "0.0.0"
description = "Google Cloud Client Libraries for Rust - Storage Control"
# Inherit other attributes from the workspace.
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace       = true
http.workspace        = true
lazy_static.workspace = true
prost.workspace       = true
prost-types.workspace = true
serde.workspace       = true
serde_json.workspace  = true
serde_with.workspace  = true
tonic.workspace       = true
tokio                 = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace     = true
# Local crates
gax.workspace         = true
gaxi                  = { workspace = true, features = ["_internal-common", "_internal-grpc-client"] }
gtype.workspace       = true
iam_v1.workspace      = true
longrunning.workspace = true
lro.workspace         = true
rpc.workspace         = true
uuid.workspace        = true
wkt.workspace         = true

[dev-dependencies]
anyhow.workspace     = true
test-case.workspace  = true
tokio-test.workspace = true
# Local crates
auth.workspace = true
